# telegram_chat

./: .env.example  .gitignore  .pylintrc  CLAUDE.md  LOCAL_EMBEDDING_SETUP.md  README.md  pyproject.toml  requirements.txt  run.py  start_bot.bat  start_bot_with_proxy.bat  test_network.py
.claude/: settings.json
.claude/commands/: codexspec.analyze.md  codexspec.checklist.md  codexspec.clarify.md  codexspec.commit-staged.md  codexspec.commit.md  codexspec.constitution.md  codexspec.generate-spec.md  codexspec.implement-tasks.md  codexspec.plan-to-tasks.md  codexspec.pr.md  codexspec.review-plan.md  codexspec.review-spec.md  codexspec.review-tasks.md  codexspec.spec-to-plan.md  codexspec.specify.md  codexspec.tasks-to-issues.md
.codexspec/: config.yml
.codexspec/memory/: constitution.md
.codexspec/scripts/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1
docs/: PROJECT_SUMMARY.md  START_GUIDE.md
scripts/: init_database.py  old_setup_mysql_db.py
scripts/migrations/: 001_create_initial_tables.py
src/: __init__.py  main.py
src/database/: config.py  connection_pool.py
src/handlers/: admin_handlers.py  base_handler.py  command_handlers.py  message_handler.py
src/integrations/: __init__.py  mimo_client.py
src/memory/: __init__.py  embedding_client.py  faiss_manager.py  local_embedding_client.py  long_term_memory.py  memory_manager.py  short_term_memory.py
src/models/: conversation.py  group_settings.py  message.py  style.py  user.py
src/repositories/: __init__.py  base_repository.py  conversation_repository.py  conversation_vector_repository.py  group_settings_repository.py  user_preferences_repository.py  user_repository.py
src/services/: chat_service.py  style_service.py
src/utils/: logger.py  rate_limiter.py  sanitizers.py  validators.py
tests/: conftest.py  test_database.py
tests/manual/: debug_mimo_api.py  find_mimo_models.py  quick_test_mimo.py  test_conversation_fix.py  test_mimo_api.py  test_simple_fix.py
tests/test_database/: __init__.py  test_config.py  test_connection_pool.py
tests/test_handlers/: __init__.py  test_command_handlers.py  test_message_handler.py
tests/test_integrations/: test_e2e.py  test_mimo_client.py
tests/test_memory/: test_embedding_client.py  test_faiss_manager.py  test_long_term_memory.py  test_memory_manager.py  test_short_term_memory.py
tests/test_models/: __init__.py  test_conversation.py  test_group_settings.py  test_message.py  test_style.py  test_user.py
tests/test_repositories/: __init__.py  test_base_repository.py  (+5 more)
(+20 files in other folders)
